--- a/index.html
+++ b/index.html
@@ -58,7 +58,37 @@
             </div>
         </div>
     </nav>
-    <div class="masthead"></div>
+    <div class="masthead">
+        <div class="col"></div>
+        <div class="col"></div>
+        <div class="col">
+            <div class="text-masthead">
+                <h3>Ingreso Marzo 2021</h3>
+            </div>
+            <div class="btn-masthead">
+                <button class="btn">Inscripción</button>
+            </div>
+            <div class="icon-wtsp">
+                <a href="#">
+                    <img src="img/iconwts.png" alt="">
+                </a>
+            </div>
+            <div class="casa">
+                <div class="triang1"></div>
+                <div class="triang2"></div>
+                <div class="line1"></div>
+                <div class="line2"></div>
+                <div class="texto-casa">
+                    <p>CARRERA TERCIARIA</p>
+                    <h3>Tecnicatura Superior en</h3>
+                    <h1>LUDOTECAS</h1>
+                    <h5>con DISEÑO en JUEGOS y JUGUETES</h5>
+                    <p>Título Oficial</p>
+                    <p>(otorga puntaje docente)</p>
+                </div>
+            </div>
+        </div>
+    </div>
     <div class="redes">
         <h3>Seguinos en las redes</h3>
         <div class="icon-redes">
@@ -103,7 +133,7 @@
         </div>
     </div>
     <div class="legales">
-        <h4>Legales</h4>
+        <h4>Derechos Reservados Yuguets</h4>
     </div>
     <script src="js/index.js"></script>
 </body>
