--- a/graduados.html
+++ b/graduados.html
@@ -38,9 +38,8 @@
             <div class="margen"></div>
             <div class="nav-inf">
                 <ul>
-                    <li class="nav-link active">
-                        <a href="#">inicio</a>
-                        <div class="linea-link"></div>
+                    <li class="nav-link">
+                        <a href="index.html">inicio</a>
                     </li>
                     <li class="nav-link">
                         <a href="#">carrera</a>
@@ -48,8 +47,9 @@
                     <li class="nav-link">
                         <a href="#">cursos</a>
                     </li>
-                    <li class="nav-link">
+                    <li class="nav-link active">
                         <a href="graduados.html">graduados</a>
+                        <div class="linea-link"></div>
                     </li>
                     <li class="nav-link">
                         <a href="#">contacto</a>
@@ -61,7 +61,6 @@
     <div class="masthead">
         <div class="col-1">
             <p>El juego es el derecho natural del ser humano</p>
-            <img src="img/mundo.png" alt="mundo">
         </div>
         <div class="col-2">
             <div class="text-masthead">
@@ -75,18 +74,89 @@
                     <img src="img/iconwts.png" alt="">
                 </a>
             </div>
-            <div class="casa">
-                <div class="triang1"></div>
-                <div class="triang2"></div>
-                <div class="line1"></div>
-                <div class="line2"></div>
-                <div class="texto-casa">
-                    <p>CARRERA TERCIARIA</p>
-                    <h3>Tecnicatura Superior en</h3>
-                    <h1>LUDOTECAS</h1>
-                    <h5>con DISEÑO en JUEGOS y JUGUETES</h5>
-                    <p>Título Oficial</p>
-                    <p>(otorga puntaje docente)</p>
+        </div>
+    </div>
+    <div class="graduados-bg">
+        <div class="graduados">
+            <div class="col">
+                <div class="col-head">
+                    <div class="col-head-img">
+                        <img src="img/iconobanda.png" alt="">
+                        <img src="img/iwoka.jpg" alt="">
+                    </div>
+                </div>
+                <div class="col-title">
+                    <div class="col-title-items">
+                        <h3>premiado</h3>
+                        <img src="img/medalla.png" alt="">
+                    </div>
+                </div>
+                <div class="col-content">
+                    <div class="col-content-title">
+                        <h4>Juego "Iwoka"</h4>
+                    </div>
+                    <div class="col-content-body">
+                        <p>
+                            Inventaron el “Iwoká”, un juego de estrategias que recrea la lucha de un pueblo aborigen contra un ejército de
+                            conquistadores. Aseguran que podría usarse como un complemento para enseñar historia en las aulas. El trabajo fue
+                            reconocido en un certamen nacional.
+                        </p>
+                    </div>
+                    <div class="col-content-footer">
+                        <a href="#">ver<i class="fas fa-plus-square"></i></a>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="col-head">
+                    <div class="col-head-img">
+                        <img src="img/iconobanda.png" alt="">
+                        <img src="img/lakhu.png" alt="">
+                    </div>
+                </div>
+                <div class="col-title">
+                    <div class="col-title-items">
+                        <h3>proyecto</h3>
+                    </div>
+                </div>
+                <div class="col-content">
+                    <div class="col-content-title">
+                        <h4>Lakhu - Ludoteca</h4>
+                    </div>
+                    <div class="col-content-body">
+                        <p>
+                            Un grupo de profesionales dirigidos por Silvia Torres Luyo, ludotecaria ejemplar, abrieron una ludoteca en Santa Fe
+                            llamada Lahku, donde coordinan talleres y otras actividades. Jóvenes y adultos difrutan de jugar a juegos de mesa
+                            antiguos y contemporáneos consultando sus reglas mecánicas e historia al ludotecario que guía la jornada
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="col-head">
+                    <div class="col-head-img">
+                        <img src="img/iconobanda.png" alt="">
+                        <img src="img/karma.png" alt="">
+                    </div>
+                </div>
+                <div class="col-title">
+                    <div class="col-title-items">
+                        <h3>publicado</h3>
+                    </div>
+                </div>
+                <div class="col-content">
+                    <div class="col-content-title">
+                        <h4>Juego "Karma"</h4>
+                    </div>
+                    <div class="col-content-body">
+                        <p>
+                            La diseñadora Marta Bertran, ludotecaria recibida de Yuguets, ha publicado su segundo juego con la empresa Bisonte.
+                            Luego de su primer juego "Duelo de poderes", Bertran incursiona en el mundo de los juegos con lógica matemática.
+                        </p>
+                    </div>
+                    <div class="col-content-footer">
+                        <a href="#">ver<i class="fas fa-plus-square"></i></a>
+                    </div>
                 </div>
             </div>
         </div>
