--- a/inscripcion.html
+++ b/inscripcion.html
@@ -38,9 +38,8 @@
             <div class="margen"></div>
             <div class="nav-inf">
                 <ul>
-                    <li class="nav-link active">
+                    <li class="nav-link">
                         <a href="index.html">inicio</a>
-                        <div class="linea-link"></div>
                     </li>
                     <li class="nav-link">
                         <a href="carrera.html">carrera</a>
@@ -61,7 +60,93 @@
     <div class="masthead">
         <div class="col-1">
             <p>El juego es el derecho natural del ser humano</p>
-            <img src="img/mundo.png" alt="mundo">
+            <div class="formulario-inscripcion">
+                <div class="form-1">
+                    <form action="">
+                        <div class="form-title">
+                            <h4>Formulario de INSCRIPCIÓN</h4>
+                        </div>
+                        <div class="input-area">
+                            <input type="text" id="nombre" class="input-text" placeholder="Nombre y Apellido">
+                        </div>
+                        <div class="input-area">
+                            <input type="text" id="email" class="input-text" placeholder="Email">
+                        </div>
+                        <div class="input-area">
+                            <input type="text" id="telefono" class="input-text" placeholder="Telefono">
+                        </div>
+                        <div class="input-area">
+                            <input type="text" id="fecha" class="input-text" placeholder="Fecha de Nacimiento"/>
+                        </div>
+                        <div class="input-area">
+                            <input type="text" id="nacionalidad" class="input-text" placeholder="Nacionalidad"/>
+                        </div>
+                        <div class="input-area">
+                            <input type="text" id="comentario" class="input-text" placeholder="Comentario"/>
+                        </div>
+                    </form>
+                </div>
+                <div class="form-2">
+                    <form action="">
+                        <div class="form-title">
+                            <h4>Estudios Académicos</h4>
+                        </div>
+                        <div class="input-title">
+                            <h4>Carrera de tu interés</h4>
+                            <p>Puedes elegir mas de una</p>
+                        </div>
+                        <div class="input-check">
+                            <input type="checkbox" id="nombre" class="input-text">
+                            <h5>Técnico Ludotecario y Diseñador en juegos y juguetes</h5>
+                        </div>
+                        <div class="input-check">
+                            <input type="checkbox" id="nombre" class="input-text">
+                            <h5>Posgrado Ludotecario Educativo</h5>
+                        </div>
+                        <div class="input-check">
+                            <input type="checkbox" id="nombre" class="input-text">
+                            <h5>Cursos, Talleres o Seminarios</h5>
+                        </div>
+                        <div class="input-check">
+                            <input type="checkbox" id="nombre" class="input-text">
+                            <h5>Otros</h5>
+                        </div>
+                        <!-- <div class="form-title">
+                            <h4>Estudios Académicos</h4>
+                        </div> -->
+                        <div class="input-title">
+                            <h4>Estudios Cursados</h4>
+                            <p>Especificar el titulo que posee. Puedes elegir mas de uno</p>
+                        </div>
+                        <div class="input-check">
+                            <input type="checkbox" id="nombre" class="input-text">
+                            <h5>Secundario terminado</h5>
+                        </div>
+                        <div class="input-check">
+                            <input type="checkbox" id="nombre" class="input-text">
+                            <h5>Terciario en curso</h5>
+                        </div>
+                        <div class="input-check">
+                            <input type="checkbox" id="nombre" class="input-text">
+                            <h5>Terciario terminado</h5>
+                        </div>
+                        <div class="input-check">
+                            <input type="checkbox" id="nombre" class="input-text">
+                            <h5>Universitario en curso</h5>
+                        </div>
+                        <div class="input-check">
+                            <input type="checkbox" id="nombre" class="input-text">
+                            <h5>Universitario terminado</h5>
+                        </div>
+                        <div class="input-area">
+                            <input type="text" id="comentario" class="input-text" placeholder="Titulos Obtenidos"/>
+                        </div>
+                        <div class="input-area">
+                            <but ton class="btn">Enviar</button>
+                        </div>
+                    </form>
+                </div>
+            </div>
         </div>
         <div class="col-2">
             <div class="text-masthead">
