--- a/graduados.html
+++ b/graduados.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/estilos.css">
     <link rel="stylesheet" href="css/normalize.css">
+    <link href="img/iso.png" type="imagenes" rel="shortcurt icon"/>
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;500&display=swap" rel="stylesheet">
     <!-- Font Awesome -->
@@ -13,6 +14,7 @@
     <title>Instituto Yuguets</title>
 </head>
 <body>
+    <!-- NAVBAR -->
     <nav class="nav">
         <div class="menu-btn" id="btn-menu">
             <i class="fas fa-bars fa-2x"></i>
@@ -58,6 +60,7 @@
             </div>
         </div>
     </nav>
+    <!-- HEAD INICIO -->
     <div class="masthead">
         <div class="col-1">
             <p>El juego es el derecho natural del ser humano</p>
@@ -70,12 +73,13 @@
                 <a href="inscripcion.html" class="btn">Inscripción</a>
             </div>
             <div class="icon-wtsp">
-                <a href="#">
+                <a href="#" id="btn-ws">
                     <img src="img/iconwts.png" alt="">
                 </a>
             </div>
         </div>
     </div>
+    <!-- COLUMNAS GRADUADOS -->
     <div class="graduados-bg">
         <div class="graduados">
             <div class="col">
@@ -132,7 +136,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col">
+            <div class="col-graduados-3">
                 <div class="col-head">
                     <div class="col-head-img">
                         <img src="img/iconobanda.png" alt="">
@@ -154,13 +158,55 @@
                             Luego de su primer juego "Duelo de poderes", Bertran incursiona en el mundo de los juegos con lógica matemática.
                         </p>
                     </div>
-                    <div class="col-content-footer">
-                        <a href="#">ver<i class="fas fa-plus-square"></i></a>
+                    <img src="img/karma2.jpg" alt="karma2">
+                    <p>Se puede adquirir en:</p>
+                    <br>
+                    <p>Juguetería LAS VEGAS:</p>
+                    <p>Ángel Gallardo 573 </p>
+                    <p>Larrea 224 - Bs As</p>
+                    <br>
+                    <p>CASA ZANZI</p>
+                    <p>Talcahuano 364 - Bs As</p>
+                </div>
+                <div class="btn-youtube">
+                    <a href="#">
+                        <img src="img/youtube.png" alt="youtube">
+                    </a>
+                </div>
+                <p class="detalle-youtube">Nota a Marta Bertran sobre el juego Karma</p>
+            </div>
+            <div class="col-graduados">
+                <div class="col-head">
+                    <div class="col-head-img">
+                        <img src="img/iconobanda.png" alt="">
+                        <img src="img/iwapele.jpg" alt="">
+                    </div>
+                </div>
+                <div class="col-title">
+                    <div class="col-title-items">
+                        <h3>premiado</h3>
+                        <img src="img/medalla.png" alt="">
+                    </div>
+                </div>
+                <div class="col-content">
+                    <div class="col-content-title">
+                        <h4>Juego "Iwapelé"</h4>
+                    </div>
+                    <div class="col-content-body">
+                        <p>
+                            Iwapele, tesis de nuestra alumna Gabriela Morando, juego presentado en 2 encuentros nacionales de juegos de mesa y totalmente agotado!! Éxito total!!
+                            Iwapele, es un concepto que en lengua yoruba significa “buen carácter”, es un estado del ser que permite actuar con
+                            integridad. Nuestra Iwa se conoce por nuestra conciencia y vincula la toma de decisiones personales desde el
+                            entendimiento por un bien colectivo.
+                        </p>
+                        <br>
+                        <p>TESTIMONIO - Gabriela Morando</p>
                     </div>
                 </div>
             </div>
         </div>
     </div>
+    <!-- REDES -->
     <div class="redes">
         <h3>Seguinos en las redes</h3>
         <div class="icon-redes">
@@ -173,6 +219,7 @@
             <a href="#"><i class="fab fa-youtube"></i></a>
         </div>
     </div>
+    <!-- FOOTER COLUMNAS -->
     <div class="columns">
         <div class="column">
             <img src="img/MARCAYUGUETSnegro.png" alt="yuguetsnegro">
@@ -185,6 +232,7 @@
                 <div class="column-text">
                     <h4>SEDE - Riobamba 1059 4° Piso</h4>
                     <h4>Recoleta - CABA</h4>
+                    <h4>Buenos Aires - Argentina</h4>
                 </div>
             </div>
             <div class="filas-column">
