--- a/carrera.html
+++ b/carrera.html
@@ -60,35 +60,207 @@
         </div>
     </nav>
     <div class="masthead">
-        <div class="col-1">
+        <div class="col-carrera-1">
             <p>El juego es el derecho natural del ser humano</p>
-            <img src="img/mundo.png" alt="mundo">
-        </div>
-        <div class="col-2">
-            <div class="text-masthead">
-                <h3>Ingreso Marzo 2021</h3>
-            </div>
-            <div class="btn-masthead">
-                <a href="inscripcion.html" class="btn">Inscripción</a>
-            </div>
-            <div class="icon-wtsp">
-                <a href="#" id="btn-ws">
-                    <img src="img/iconwts.png" alt="">
-                </a>
-            </div>
-            <div class="casa">
-                <div class="triang1"></div>
-                <div class="triang2"></div>
-                <div class="line1"></div>
-                <div class="line2"></div>
-                <div class="texto-casa">
-                    <p>CARRERA TERCIARIA</p>
-                    <h3>Tecnicatura Superior en</h3>
-                    <h1>LUDOTECAS</h1>
-                    <h5>con DISEÑO en JUEGOS y JUGUETES</h5>
-                    <p>Título Oficial</p>
-                    <p>(otorga puntaje docente)</p>
+            <div class="charla">
+                <div class="titulo-charla">
+                    <h3>charla informativa</h3>
                 </div>
+                <div class="texto-charla">
+                    <img src="img/charla.png" alt="">
+                    <p>
+                        La tecnicatura Superior en Ludotecas con Diseño de Juegos y Juguetes crea un espacio innovador, responsable e idóneo en
+                        el uso, control y diseño de juegos y juguetes.
+                    </p>
+                    <p>
+                        El alumno investiga, diseña, construye, juega. Incorpora herramientas para el control de calidad y el diseño innovador
+                        con identidad nacional. Sabrá transmitir alternativas para atender la diversidad y la enseñanza en valores a través del
+                        juego y el juguete.
+                    </p>
+                    <p>
+                        La capacitación y formación lúdica integral permitirá el desarrollo especializado y creativo de proyectos sustentables
+                        en todo ámbito, para toda edad y desde nuevos paradigmas.
+                    </p>
+                </div>
+                <div class="btn-youtube">
+                    <a href="#">
+                        <img src="img/youtube.png" alt="youtube">
+                    </a>
+                </div>
+            </div>
+        </div>
+        <div class="col-carrera-2">
+            <div class="cont-carrera">
+                <div class="text-masthead">
+                    <h3>Ingreso Marzo 2021</h3>
+                </div>
+                <div class="btn-masthead">
+                    <a href="inscripcion.html" class="btn">Inscripción</a>
+                </div>
+            </div>
+            <div class="cont-carrera-2">
+                <div class="cont-texto">
+                    <h2>Carrera Terciaria</h2>
+                    <h2>TECNICATURA SUPERIOR</h2>
+                    <h2>en LUDOTECAS con DISEÑO</h2>
+                    <h2>en JUEGOS y JUGUETES</h2>
+                </div>
+                <div class="wtsp">
+                    <a href="#" id="btn-ws">
+                        <img src="img/iconwts.png" alt="">
+                    </a>
+                </div>
+            </div>
+            <div class="cont-carrera-3">
+                <div class="parrafo1">
+                    <h2>Título Oficial</h2>
+                    <h4>Otorga puntaje docente</h4>
+                    <h4>(2 puntos)</h4>
+                </div>
+                <div class="parrafo2">
+                    <h3>DURACIÓN: 2 ½ años</h3>
+                    <h3>DÍAS Y HORARIOS:</h3>
+                    <h3>Martes y Viernes</h3>
+                    <h3>17:00 a 23:00 hs</h3>
+                </div>
+            </div>
+            <div class="cont-carrera-4">
+                <div class="cont4-titulo">
+                    <h3>requisitos</h3>
+                </div>
+                <div class="cont4-body">
+                    <div class="cont4-text">
+                        <img src="img/tilde.png" alt="">
+                        <p>Título secundario</p>
+                    </div>
+                    <div class="cont4-text">
+                        <img src="img/tilde.png" alt="">
+                        <p>Presentar DNI o pasaporte.</p>
+                    </div>
+                    <div class="cont4-text">
+                        <img src="img/tilde.png" alt="">
+                        <p>2 fotos tipo carnet.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="division-carrera"></div>
+    <div class="laboral-carrera">
+        <div class="seccion">
+            <div class="seccion1">
+                <div class="seccion1-titulo">
+                    <h3>salida laboral</h3>
+                </div>
+                <div class="seccion1-texto">
+                    <p>
+                        La capacitación y formación Lúdica que recibe el alumno le permite el desarrollo especializado
+                        y creativo de proyectos sustentables a traves de juegos y juguetes.
+                    </p>
+                </div>
+            </div>
+            <div class="seccion1-linea"></div>
+        </div>
+        <div class="seccion2">
+            <div class="seccion2-item">
+                <i class="fas fa-caret-right"></i>
+                <p>Armado de Ludotecas  en distintos ámbitos y para toda edad. </p>
+            </div>
+            <div class="seccion2-item">
+                <i class="fas fa-caret-right"></i>
+                <p>Realizar propuestas pedagógicas y creativas con actividades lúdicas.</p>
+            </div>
+            <div class="seccion2-item">
+                <i class="fas fa-caret-right"></i>
+                <p>Título técnico profesional habilitante para dictar asignaturas, talleres y cursos específicos según estatuto docente.</p>
+            </div>
+            <div class="seccion2-item">
+                <i class="fas fa-caret-right"></i>
+                <p>Planificar, investigar,  asesorar, ejecutar y evaluar programas y proyectos lúdicos-creativos.</p>
+            </div>
+            <div class="seccion2-item">
+                <i class="fas fa-caret-right"></i>
+                <p>Crear espacios de implementación adecuada del juego.</p>
+            </div>
+            <div class="seccion2-item">
+                <i class="fas fa-caret-right"></i>
+                <p>Diseñar y crear juegos, juguetes, títeres y objetos lúdicos.</p>
+            </div>
+        </div>
+    </div>
+    <div class="plan-estudio">
+        <div class="plan-titulo">
+            <div class="titulo-icono">
+                <img src="img/plan.png" alt="plan">
+            </div>
+            <div class="titulo-texto">
+                <div class="icon">
+                    <img src="img/isogris.png" alt="">
+                </div>
+                <div class="text">
+                    <h3>plan de estudio</h3>
+                    <p>Dirección: Rosa Planas</p>
+                </div>
+            </div>
+        </div>
+        <div class="plan-columnas">
+            <div class="plan-columna">
+                <h3>MATERIAS - Primer año </h3>
+                <h4>1er. cuatrimestre</h4>
+                <p>
+                    Cultura lúdica<br>
+                    Juegos I<br>
+                    Juegos Étnicos<br>
+                    Dibujo I<br>
+                    Comunicación<br>
+                    Práctica de Investigación<br>
+                    Práctica de Observación<br>
+                    Práctica de Medios de Comunicación<br>
+                </p>
+                <h4>2do. cuatrimestre</h4>
+                <p>
+                    Culturas Lúdicas en la Historia<br>
+                    Juegos del Mundo I<br>
+                    Juegos II<br>
+                    Ps. Evolutiva y del Aprendizaje<br>
+                    Dibujo II<br>
+                    Práctica en juegos de la Antigüedad<br>
+                </p>
+            </div>
+            <div class="plan-columna">
+                <h3>MATERIAS - Segundo año</h3>
+                <h4>1er. cuatrimestre</h4>
+                <p>
+                    Cultura Lúdica de Juguetes<br>
+                    Juegos III<br>
+                    Juegos del Mundo II<br>
+                    Psicología Social<br>
+                    Diseño<br>
+                    Práctica en Juegos Circenses<br>
+                    Práctica en Juegos<br>
+                    Contemporáneos<br>
+                </p>
+                <h4>2do. cuatrimestre</h4>
+                <p>
+                    Culturas Lúdicas Argentina<br>
+                    Juegos IV<br>
+                    Multimedia<br>
+                    Diseño Digital<br>
+                    Ética Profesional<br>
+                    Reparación de Juguetes<br>
+                </p>
+            </div>
+            <div class="plan-columna">
+                <h3>MATERIAS - Tercer año</h3>
+                <h4>1er. cuatrimestre</h4>
+                <p>
+                    Marcos de Ludotecas y Juegotecas<br>
+                    Juegos V<br>
+                    Estética<br>
+                    Diseño de Juegos<br> 
+                    Proyecto Final Integrador<br>
+                    Práctica en Instituciones<br>
+                </p>
             </div>
         </div>
     </div>
