--- a/contacto.html
+++ b/contacto.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/estilos.css">
-    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="sass/main.css">
+    <link rel="stylesheet" href="sass/normalize.css">
     <link href="img/iso.png" type="imagenes" rel="shortcurt icon"/>
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;500&display=swap" rel="stylesheet">
