--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/estilos.css">
-    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="sass/main.css">
+    <link rel="stylesheet" href="sass/normalize.css">
     <link href="img/iso.png" type="imagenes" rel="shortcurt icon"/>
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;500&display=swap" rel="stylesheet">
@@ -14,6 +14,7 @@
     <title>Instituto Yuguets</title>
 </head>
 <body>
+    <!-- NAVEGACION -->
     <nav class="nav">
         <div class="menu-btn" id="btn-menu">
             <i class="fas fa-bars fa-2x"></i>
@@ -59,6 +60,7 @@
             </div>
         </div>
     </nav>
+    <!-- MASTHEAD -->
     <div class="masthead">
         <div class="col-1">
             <p>El juego es el derecho natural del ser humano</p>
@@ -92,6 +94,7 @@
             </div>
         </div>
     </div>
+    <!-- FOOTER Y REDES -->
     <div class="redes">
         <h3>Seguinos en las redes</h3>
         <div class="icon-redes">
